k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bizobs
  labels:
    app: bizobs
    environment: production
    deployment: acebox
