k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bizobs-app-service
  namespace: bizobs
  labels:
    app: bizobs-app
spec:
  type: NodePort
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 30080
    name: http
  selector:
    app: bizobs-app
